--- a/src/main/MainFrame.form
+++ b/src/main/MainFrame.form
@@ -31,15 +31,15 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Start"/>
+          <text value="&amp;Start"/>
         </properties>
       </component>
-      <component id="600b4" class="javax.swing.JButton" binding="button2" default-binding="true">
+      <component id="600b4" class="javax.swing.JButton" binding="settingsButton">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="&amp;Ustawienia"/>
         </properties>
       </component>
       <vspacer id="e21b0">
